--- a/djangoweb/products/templates/products/detail_product.html
+++ b/djangoweb/products/templates/products/detail_product.html
@@ -13,6 +13,8 @@
 
         <div class="product-detail-container container">
 
+            {% include "website/partials/_cart-messages.html" %}
+
             <!-- MAIN SECTION -->
             <div class="product-detail-main">
                 <div class="product-detail-image">
@@ -38,7 +40,7 @@
                         </a>
 
                         <!-- CARRINHO -->
-                        <form action="{% url "products:cart" %}" method="post">
+                        <form action="{% url "cart:cart_add" product.slug_product %}" method="post">
                             {% csrf_token %}
                             <button type="submit" class="btn btn-cart">
 
