Adding breadcrumbs to cart.html

--- a/djangoweb/cart/templates/cart/cart.html
+++ b/djangoweb/cart/templates/cart/cart.html
@@ -5,7 +5,9 @@
     <div class="cart-content">
         <div class="container">
 
-            {% include "website/partials/_breadcrumbs.html" %}
+            <div class="breadcrumbs-cart">
+                {% include "website/partials/_breadcrumbs.html" %}
+            </div>
 
             <div class="cart-header">
                     <h1>O meu carrinho</h1>
