--- a/djangoweb/website/static/website/css/style.css
+++ b/djangoweb/website/static/website/css/style.css
@@ -2517,7 +2517,7 @@ a {
     margin: 0;
     display: flex;
     flex-direction: row;
-    font-size: 1.1rem;
+    font-size: .9rem;
     color: var(--color-primary-dark);
     padding: 1rem 0 0;
     font-weight: bold;
@@ -2558,6 +2558,10 @@ a {
     display: flex;
     flex-direction: row;
     gap: 2rem;
+}
+
+.breadcrumbs-cart .container {
+    width: 100%;
 }
 
 .cart-header {
