Handling errors if the cart is empty.

--- a/djangoweb/cart/templates/cart/cart.html
+++ b/djangoweb/cart/templates/cart/cart.html
@@ -9,6 +9,9 @@
                 {% include "website/partials/_breadcrumbs.html" %}
             </div>
 
+            {% include "website/partials/_cart-messages.html" %}
+
+
             <div class="cart-header">
                     <h1>O meu carrinho</h1>
                     <span>{{ products|length }} produto(s)</span>
