--- a/djangoweb/products/templates/products/detail_product.html
+++ b/djangoweb/products/templates/products/detail_product.html
@@ -5,7 +5,7 @@
 
     {% include "website/partials/_hero-content.html" %}
 
-    <div class="content-products">
+    <div class="content-products-detail">
         {% include "website/partials/_breadcrumbs.html" %}
     </div>
 
