--- a/djangoweb/website/static/website/css/style.css
+++ b/djangoweb/website/static/website/css/style.css
@@ -2576,6 +2576,10 @@ a {
     margin-top: 100px;
 }
 
+.content-products {
+    background-color: var(--color-light);
+}
+
 .content-products-list {
     background-color: var(--color-light);
 }
@@ -2603,7 +2607,7 @@ a {
 
 @media (max-width: 768px){
     .breadcrumb {
-        font-size: .9rem;
+        font-size: .8rem;
     }
 }
 
