--- a/djangoweb/products/templates/products/list_products.html
+++ b/djangoweb/products/templates/products/list_products.html
@@ -5,7 +5,7 @@
 
     {% include "website/partials/_hero-content.html" %}
 
-    <div class="content-products-list">
+    <div class="content-products">
         {% include "website/partials/_breadcrumbs.html" %}
     </div>
     <div class="content">
