--- a/djangoweb/website/static/website/css/style.css
+++ b/djangoweb/website/static/website/css/style.css
@@ -2485,6 +2485,11 @@ a {
         width: 100%;
     }
 
+    .product-detail-image {
+        align-items: center;
+        justify-content: unset;
+    }
+
     .product-detail-buttons i{
         font-size: 43px;
     }
@@ -2504,6 +2509,9 @@ a {
         width: 100%;
     }
 
+    .product-detail-title {
+        font-size: 2rem;
+    }
 
     .product-detail-buttons .btn-group-inline {
         flex-direction: row;
@@ -2591,7 +2599,7 @@ a {
 .breadcrumb {
     margin: 0;
     display: flex;
-    flex-direction: row;
+    flex-wrap: wrap;
     font-size: .9rem;
     color: var(--color-primary-dark);
     padding: 1rem 0 0;
