Optimizing the project with reusable functions (clean_functions), comments and other adjustments

--- a/djangoweb/website/static/website/css/style.css
+++ b/djangoweb/website/static/website/css/style.css
@@ -972,6 +972,7 @@ a {
     font-size: 2.5rem;
     margin-bottom: 1rem;
     color: var(--color-primary);
+    font-style: normal;
 }
 
 .reason-card p {
