--- a/djangoweb/website/templates/website/partials/_footer.html
+++ b/djangoweb/website/templates/website/partials/_footer.html
@@ -2,13 +2,13 @@
 
     <div class="footer-container container">
 
-        <!-- COLUNA 1: LOGO E NOME -->
+        <!-- COLUMN 1: LOGO AND NAME -->
         <div class="footer-col footer-brand">
             <img src="{{ site_setup.favicon.url }}" alt="Logo {{ site_setup.title }}" class="footer-logo-img">
             <h2 class="footer-logo">{{ site_setup.title }}</h2>
         </div>
 
-         <!-- COLUNA 2: LINKS ÚTEIS -->
+         <!-- COLUMN 2: UTILS LINKS -->
         <div class="footer-col footer-links">
             <h3>Links</h3>
             <ul>
@@ -22,7 +22,7 @@
             </ul>
         </div>
 
-        <!-- COLUNA 3: CONTATOS -->
+        <!-- COLUMN 3: CONTACTS -->
         <div class="footer-col footer-contact">
             <h3>Contatos</h3>
             
@@ -55,7 +55,7 @@
             {% endfor %}
         </div>
 
-        <!-- COLUNA 4: ENDEREÇO E HORARIOS -->
+        <!-- COLUNA 4: ADDRESS AND SCHEDULES -->
         <div class="footer-col footer-address">
 
             <h3>Horários</h3>
@@ -70,7 +70,7 @@
         </div>
     </div>
 
-    <!-- CRÉDITOS -->
+    <!-- CREDITS -->
         
     <div class="footer-bottom">
         <p>&copy; {% now "Y" %} {{ site_setup.title }}. Todos os direitos reservados.</p>
