Adjusting some details in the website

--- a/djangoweb/website/static/website/css/style.css
+++ b/djangoweb/website/static/website/css/style.css
@@ -79,6 +79,7 @@ body::before {
     background-repeat: no-repeat;
     background-size: auto;
     z-index: -1;
+    opacity: 0.6;
 }
     
 
@@ -881,7 +882,6 @@ a {
 .featured-products {
     padding: 4rem .5rem;
     background-color: var(--color-light);
-    margin-top: 5rem;
 }
 
 .section-title{
@@ -913,9 +913,8 @@ a {
     transform: translateY(-5px);
 }
 
-.product-card a img {
+.product-card img {
     max-width: 100%;
-    height: 160px;
     object-fit: cover;
     border-radius: var(--border-radius);
 }
@@ -924,6 +923,10 @@ a {
     font-size: 1.4rem;
     color: var(--color-dark-gray);
     line-height: 1.5;
+}
+
+.product-description {
+    text-shadow: 0 0 1px rgba(0,0,0,0.4);
 }
 
 .product-btn {
@@ -976,7 +979,8 @@ a {
 }
 
 .reason-card p {
-    text-align: initial;
+    text-align: center;
+    text-shadow: 0 0 1px rgba(0,0,0,0.4);
 }
 
 .reason-title{
@@ -1090,8 +1094,6 @@ a {
         gap: 2rem;
     }
 
-    /* ====== BANNER ====== */
-
     .banner-slider{
         aspect-ratio: 12 / 9;
     }
@@ -1110,6 +1112,11 @@ a {
         margin-top: var(--space-md);
         font-size: 1rem;
     }
+
+    .reason-card {
+        padding: 1rem;
+    }
+
 }
 
 @media (max-width: 365px){
@@ -1569,14 +1576,16 @@ a {
 
 .about-page p{
     margin-bottom: 1.35rem;
-    font-size: 1.35rem;
+    font-size: 1.2rem;
+    text-align: center;
 }
 
 .about-page ul {
     list-style: none;
     padding-left: 0;
     margin-bottom: 1.5rem;
-    font-size: 1.25rem;
+    font-size: 1.2rem;
+    text-align: center;
 }
 
 .about-page .note {
@@ -1612,7 +1621,7 @@ a {
 @media (max-width: 768px) {
 
     .main-content{
-        padding: 20px 0;
+        padding: 20px 10px;
     }
 
     .about-page {
@@ -1625,8 +1634,12 @@ a {
         font-size: 2rem;
     }
 
-    .about-page h2 {
-        font-size: 1.5rem;
+    .about-page ul {
+        font-size: 1rem;
+    }
+
+    .about-page p {
+        font-size: 1rem;
     }
 }
 
@@ -2198,7 +2211,6 @@ a {
 
     .hero {
         padding: 0 0.5rem 1.2rem;
-        text-align: unset;
     }
 
     .hero-content h1 {
