Update CSS breadcrumbs

--- a/djangoweb/website/static/website/css/style.css
+++ b/djangoweb/website/static/website/css/style.css
@@ -2633,6 +2633,9 @@ a {
     align-items: center;
 }
 
+.breadcrumb .no-active:hover {
+    text-decoration: underline;
+}
 
 @media (max-width: 768px){
     .breadcrumb {
