--- a/djangoweb/website/templates/website/partials/_breadcrumbs.html
+++ b/djangoweb/website/templates/website/partials/_breadcrumbs.html
@@ -5,7 +5,7 @@
                 <li class="active">{{ item.name }}</li>
             {% else %}
                 <li>
-                    <a href="{{ item.url }}">
+                    <a class="no-active" href="{{ item.url }}">
                         {{ item.name }}
                     </a>
                 </li>
