--- a/djangoweb/website/templates/website/partials/_hero-content.html
+++ b/djangoweb/website/templates/website/partials/_hero-content.html
@@ -1,8 +1,20 @@
 <section class="hero">
-
+    
     <div class="hero-content">
-        <h1>Encontre o produto ideal para o seu projeto</h1>
-        <p>Qualidade, design e funcionalidade reunidos em um só lugar.</p>
+
+        {% if is_sob_medida_page %}
+
+            <h1>{{ page_title }}</h1>
+            <h2>Tem um projeto especial?</h2> 
+            <p>Descreva sua necessidade e anexe seu desenho. Nossa equipe de engenharia entrará em contato.
+            </p>
+
+        {% else %}
+
+            <h1>Encontre o produto ideal para o seu projeto</h1>
+            <p>Qualidade, design e funcionalidade reunidos em um só lugar.</p>
+
+        {% endif %}
     </div>
 
     <form class="search-bar" action="{% url "products:products-search" %}" method="get" title="Pesquisar">
